crates/apollo-compiler/test_data/diagnostics/0065_subselection_of_enum.txt
Error: subselection set for scalar and enum types must be empty
    ╭─[0065_subselection_of_enum.graphql:2:3]
    │
  2 │       pet1 { name }
    │       ──────┬──────  
    │             ╰──────── field `pet1` of type `Pet` is an enum and cannot select any fields
    │ 
 19 │ ╭─▶ enum Pet {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: subselection set for scalar and enum types must be empty
    ╭─[0065_subselection_of_enum.graphql:3:3]
    │
  3 │       pet2 { name }
    │       ──────┬──────  
    │             ╰──────── field `pet2` of type `Pet` is an enum and cannot select any fields
    │ 
 19 │ ╭─▶ enum Pet {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: subselection set for scalar and enum types must be empty
    ╭─[0065_subselection_of_enum.graphql:4:3]
    │
  4 │       pet3 { name }
    │       ──────┬──────  
    │             ╰──────── field `pet3` of type `Pet` is an enum and cannot select any fields
    │ 
 19 │ ╭─▶ enum Pet {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: subselection set for scalar and enum types must be empty
    ╭─[0065_subselection_of_enum.graphql:5:3]
    │
  5 │       pet4 { name }
    │       ──────┬──────  
    │             ╰──────── field `pet4` of type `Pet` is an enum and cannot select any fields
    │ 
 19 │ ╭─▶ enum Pet {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: subselection set for scalar and enum types must be empty
    ╭─[0065_subselection_of_enum.graphql:6:3]
    │
  6 │       pet5 { name }
    │       ──────┬──────  
    │             ╰──────── field `pet5` of type `Pet` is an enum and cannot select any fields
    │ 
 19 │ ╭─▶ enum Pet {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯
Error: subselection set for scalar and enum types must be empty
    ╭─[0065_subselection_of_enum.graphql:7:3]
    │
  7 │       pet6 { name }
    │       ──────┬──────  
    │             ╰──────── field `pet6` of type `Pet` is an enum and cannot select any fields
    │ 
 19 │ ╭─▶ enum Pet {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── `Pet` declared here
────╯

